# mcp-proxy

./: LICENSE  README.md  mcp-servers.json  mcp-servers.yaml  pyproject.toml
src/mcp_proxy/: __init__.py  client.py  proxy.py  server.py  types.py
